# matryoshka-test

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  imagenette.yaml
docs/superpowers/plans/: 2026-05-22-mrl-vs-baseline-resnet50.md
docs/superpowers/specs/: 2026-05-22-mrl-vs-baseline-resnet50-design.md
scripts/: analyze.py  init_data.py  train.py
src/: checkpoint.py  config.py  data.py  eval.py  losses.py  metrics.py  models.py  train.py  viz.py
tests/: test_analyze.py  test_checkpoint.py  test_cli.py  test_config.py  test_data.py  test_eval.py  test_init_data.py  test_losses.py  test_metrics.py  test_models.py  test_train_smoke.py  test_viz.py
