[project]
name = "matryoshka-test"
version = "0.1.0"
description = "MRL vs baseline ResNet50 comparison on ImageNet-1K"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
data = ["kaggle", "huggingface_hub"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
